@@ -7,15 +7,6 @@
 //
 
 #import "WKBackForwardList.h"
-#import "WCBackForwardList.h"
-
-// *** Function to access WCURICache singleton
-
-id <WCBackForwardList> WCCreateBackForwardList(void)
-{
-    return [[WKBackForwardList alloc] init];
-}
-
 
 @implementation WKBackForwardList
 
